# norch

./: .gitignore  README.md  demo.ipynb  pyproject.toml
docs/source/: conf.py  dtype.rst  index.rst  layer.activation.rst  layer.rst  loss.rst  modules.rst  nn.rst  optim.rst
dtype/: tensor.py
layer/: __init__.py  linear.py  module.py  sequential.py
layer/activation/: __init__.py  relu.py  sigmoid.py
loss/: __init__.py  base_loss.py  cross_entropy.py  hinge.py  mse.py
nn/: mlp.py
norch/layer/activation/: sigmoid.py
norch/loss/: __init__.py  base_loss.py  mse.py
norch/optim/: sgd.py
optim/: base_optimizer.py  sgd.py
