[tool.poetry]
name = "norch"
version = "0.1.0"
description = "This repo is to create a pytorch like deep learning framework."
authors = ["Prakash Chaudhary <connectwithprakash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
